contact data save in db process

--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -13,3 +13,8 @@ figure , a , span {
 span:hover>img , a:hover>img , figure:hover>img {
 	transform: scale(1.1) ;
 }
+
+/* error message */
+#content .text-danger {
+	color: #a94442;
+}
